--- a/res/layout-land/superuser_pin_preference.xml
+++ b/res/layout-land/superuser_pin_preference.xml
@@ -3,11 +3,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/password"
@@ -24,21 +25,20 @@
             android:textColor="@android:color/holo_blue_dark" />
 
         <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center" >
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <LinearLayout
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
+                    android:layout_marginBottom="4dp">
 
                     <Button
                         android:id="@+id/p1"
@@ -52,16 +52,17 @@
                         android:id="@+id/p3"
                         style="@style/PinButton" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
-
                     <Button
                         android:id="@+id/p4"
                         style="@style/PinButton" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" 
+                    android:layout_marginBottom="4dp">
 
                     <Button
                         android:id="@+id/p5"
@@ -71,13 +72,6 @@
                         android:id="@+id/p6"
                         style="@style/PinButton" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
-
                     <Button
                         android:id="@+id/p7"
                         style="@style/PinButton" />
@@ -86,24 +80,25 @@
                         android:id="@+id/p8"
                         style="@style/PinButton" />
 
+                </LinearLayout>
+
+                <LinearLayout
+                    style="?android:attr/buttonBarStyle"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" 
+                    android:layout_marginBottom="4dp">
+
                     <Button
                         android:id="@+id/p9"
                         style="@style/PinButton" />
 
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
+                    <Button
+                        android:id="@+id/p0"
+                        style="@style/PinButton" />
 
                     <Button
                         style="@style/PinButton"
                         android:enabled="false" />
-
-                    <Button
-                        android:id="@+id/p0"
-                        style="@style/PinButton" />
 
                     <ImageButton
                         android:id="@+id/pd"
@@ -117,35 +112,6 @@
 
         </FrameLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:background="?android:attr/dividerHorizontal"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="?android:attr/buttonBarStyle">
-
-            <Button
-                android:id="@+id/cancel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:text="@android:string/cancel" />
-
-            <Button
-                android:id="@+id/ok"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:text="@android:string/ok" />
-
-        </LinearLayout>
-
     </LinearLayout>
+
 </LinearLayout>
