--- a/res/layout/superuser_pin_preference.xml
+++ b/res/layout/superuser_pin_preference.xml
@@ -3,11 +3,12 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="vertical">
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:orientation="vertical" >
+        android:orientation="vertical">
 
         <EditText
             android:id="@+id/password"
@@ -24,21 +25,20 @@
             android:textColor="@android:color/holo_blue_dark" />
 
         <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="0dp"
-                android:layout_weight="1"
-                android:gravity="center" >
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="1">
 
             <LinearLayout
-                    android:layout_gravity="center"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical" >
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
 
                 <LinearLayout
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
+                    android:layout_marginBottom="4dp">
 
                     <Button
                         android:id="@+id/p1"
@@ -55,9 +55,10 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
+                    android:layout_height="wrap_content" 
+                    android:layout_marginBottom="4dp">
 
                     <Button
                         android:id="@+id/p4"
@@ -74,9 +75,10 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
+                    android:layout_height="wrap_content" 
+                    android:layout_marginBottom="4dp">
 
                     <Button
                         android:id="@+id/p7"
@@ -93,9 +95,10 @@
                 </LinearLayout>
 
                 <LinearLayout
+                    style="?android:attr/buttonBarStyle"
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    style="?android:attr/buttonBarStyle">
+                    android:layout_height="wrap_content" 
+                    android:layout_marginBottom="4dp">
 
                     <Button
                         style="@style/PinButton"
@@ -103,6 +106,9 @@
 
                     <Button
                         android:id="@+id/p0"
+                        android:layout_height="64dp"
+                        android:layout_width="0dp"
+                        android:layout_weight="1"
                         style="@style/PinButton" />
 
                     <ImageButton
@@ -117,35 +123,6 @@
 
         </FrameLayout>
 
-        <View
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:background="?android:attr/dividerHorizontal"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            style="?android:attr/buttonBarStyle">
-
-            <Button
-                android:id="@+id/cancel"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:text="@android:string/cancel" />
-
-            <Button
-                android:id="@+id/ok"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:background="?android:attr/selectableItemBackground"
-                android:text="@android:string/ok" />
-
-        </LinearLayout>
-
     </LinearLayout>
+
 </LinearLayout>
