--- a/res/menu/superuser_menu.xml
+++ b/res/menu/superuser_menu.xml
@@ -17,9 +17,19 @@
  -->
 
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:id="@+id/menu_switch"
-        android:showAsAction="always"
-        android:actionLayout="@layout/action_view_switch"
-        android:menuCategory="container"
-        android:orderInCategory="3" />
+
+    <item android:id="@+id/menu_logs"
+          android:icon="@drawable/ic_menu_logs"
+          android:title="@string/superuser_app_policies_title"
+          android:showAsAction="ifRoom"
+          android:menuCategory="container"
+          android:orderInCategory="2" />
+
+    <item android:id="@+id/menu_app_policies"
+          android:icon="@drawable/ic_menu_app_policies"
+          android:title="@string/superuser_app_policies_logs_title"
+          android:showAsAction="ifRoom"
+          android:menuCategory="container"
+          android:orderInCategory="1" />
+
 </menu>
