--- a/res/values-land/styles.xml
+++ b/res/values-land/styles.xml
@@ -2,9 +2,9 @@
 <resources>
     <style name="PinButton">
         <item name="android:layout_width">0dp</item>
-        <item name="android:layout_height">64dp</item>
+        <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_weight">1</item>
-        <item name="android:textSize">22sp</item>
+        <item name="android:textSize">16sp</item>
         <item name="android:background">?android:attr/selectableItemBackground</item>
         <item name="android:paddingStart">4dip</item>
         <item name="android:paddingEnd">4dip</item>
