--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -114,7 +114,6 @@
         <item>26</item>
     </string-array>
 
-
     <string-array name="statusbar_batt_style_entries" translatable="false">
         <item>@string/pref_statusbar_batt_style_stock</item>
         <item>@string/pref_statusbar_batt_style_percent</item>
@@ -122,6 +121,18 @@
     </string-array>
 
     <string-array name="statusbar_batt_style_entryvalues" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
+
+    <string-array name="statusbar_clock_am_pm_style_entries" translatable="false">
+        <item>@string/pref_statusbar_clock_am_pm_style_normal</item>
+        <item>@string/pref_statusbar_clock_am_pm_style_small</item>
+        <item>@string/pref_statusbar_clock_am_pm_style_gone</item>
+    </string-array>
+
+    <string-array name="statusbar_clock_am_pm_style_entryvalues" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
