--- a/res/xml/lockscreen_general.xml
+++ b/res/xml/lockscreen_general.xml
@@ -30,4 +30,14 @@
         android:entries="@array/lockscreen_general_background_entries"
         android:entryValues="@array/lockscreen_general_background_values"/>
 
+    <CheckBoxPreference
+        android:key="pref_lockscreen_general_translucent"
+        android:title="@string/pref_lockscreen_general_translucent_title"
+        android:summary="@string/pref_lockscreen_general_translucent_summary"/>
+
+    <CheckBoxPreference
+        android:key="pref_lockscreen_general_rotation"
+        android:title="@string/pref_lockscreen_general_rotation_title"
+        android:summary="@string/pref_lockscreen_general_rotation_summary"/>
+
 </PreferenceScreen>
