Settings : Add hooks for device specific buttons
Change-Id: Ia4835c69a8ba8fb76597e0ab0540f8ef1ed6e322

--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -124,4 +124,11 @@
 
     </PreferenceCategory>
 
+    <Preference
+        android:key="extra_keys"
+        android:title="@string/extra_keys_title"
+        android:summary="@string/extra_keys_summary" >
+        <intent android:action="org.lineageos.settings.device.ADDITIONAL_BUTTONS_SETTINGS" />
+    </Preference>
+
 </PreferenceScreen>
