--- a/res/xml/interface_general.xml
+++ b/res/xml/interface_general.xml
@@ -34,6 +34,11 @@
             android:summary="@string/pref_lockscreen_music_controls_volbtn_summary">
         </CheckBoxPreference>
 
+        <CheckBoxPreference
+            android:key="pref_interface_fancy_ui"
+            android:title="@string/pref_interface_fancy_ui_title"
+            android:summary="@string/pref_interface_fancy_ui_summary"/>
+
         <com.evervolv.toolbox.custom.NumberPickerPreference android:key="pref_interface_density_picker"
             android:title="@string/pref_interface_density_picker_title">
         </com.evervolv.toolbox.custom.NumberPickerPreference>
