--- a/res/layout-land/bugreport.xml
+++ b/res/layout-land/bugreport.xml
@@ -22,5 +22,18 @@
     android:layout_height="match_parent"
     android:orientation="vertical">
 
-    <include layout="@layout/bugreport_base"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:fillViewport="true">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <include layout="@layout/bugreport_base"/>
+
+        </LinearLayout>
+    </ScrollView>
 </LinearLayout>
