--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -62,6 +62,27 @@
     <string-array name="system_nav" translatable="false">
         <item>@string/tab_title_system</item>
         <item>@string/system_network_title</item>
+        <item>@string/system_disable_apps_title</item>
+    </string-array>
+
+    <!-- list of apps that have been deemed safe to disable.
+         For apps that we need to make sure there is an alternate replacement,
+         add a trailing intent. This seems to be the best way.
+
+         Usage: <come.package.name>:<Intent string>
+         Example: com.android.launcher3:#Intent;action=android.intent.action.MAIN;android.intent.category.HOME;end -->
+
+    <string-array name="disable_apps_whitelist" translatable="false">
+        <item>com.android.launcher3:#Intent;action=android.intent.action.MAIN;category=android.intent.category.HOME;end</item>
+        <item>com.android.camera2:#Intent;action=android.media.action.IMAGE_CAPTURE;end</item>
+        <item>com.android.mms</item>
+        <item>com.android.inputmethod.latin</item>
+        <item>com.android.music</item>
+        <item>com.android.browser</item>
+        <item>com.android.calendar</item>
+        <item>com.android.email</item>
+        <item>com.android.deskclock</item>
+        <item>net.cactii.flash2</item>
     </string-array>
 
     <array name="lockscreen_style_picker_captions" translatable="false">
