--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -35,4 +35,8 @@
     <string name="config_defaultDpi" translatable="false">-1</string>
     <string name="config_recommendedTabletDpi" translatable="false">-1</string>
 
+    <!-- Processor -->
+    <string name="pref_max_cpu_freq_file" translatable="false">/sys/devices/system/cpu/cpu0/cpufreq/scaling_max_freq</string>
+    <string name="pref_min_cpu_freq_file" translatable="false">/sys/devices/system/cpu/cpu0/cpufreq/scaling_min_freq</string>
+
 </resources>
