--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -20,11 +20,23 @@
     android:key="status_bar_settings"
     android:title="@string/status_bar_title">
 
-    <PreferenceScreen
-        android:key="status_bar_icons"
-        android:title="@string/status_bar_icons_title"
-        android:summary="@string/status_bar_icons_summary">
-        <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
-    </PreferenceScreen>
+    <evervolv.preference.EVSystemSettingListPreference
+        android:key="qs_quick_pulldown"
+        android:title="@string/status_bar_quick_qs_pulldown_title"
+        android:entries="@array/status_bar_quick_qs_pulldown_entries"
+        android:entryValues="@array/status_bar_quick_qs_pulldown_values"
+        android:defaultValue="0" />
+
+    <PreferenceCategory
+        android:title="@string/status_bar_icons_title">
+
+        <PreferenceScreen
+            android:key="status_bar_icons"
+            android:title="@string/status_bar_system_icons_title"
+            android:summary="@string/status_bar_system_icons_summary">
+            <intent android:action="com.android.settings.action.STATUS_BAR_TUNER" />
+        </PreferenceScreen>
+
+    </PreferenceCategory>
 
 </PreferenceScreen>
