--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -170,4 +170,16 @@
         <item>4</item>
     </string-array>
 
+    <!-- Expanded desktop styles -->
+    <string-array name="expanded_desktop_style_entries" translatable="false">
+        <item>@string/expanded_desktop_style_hide_both</item>
+        <item>@string/expanded_desktop_style_hide_status</item>
+        <item>@string/expanded_desktop_style_hide_navigation</item>
+    </string-array>
+
+    <string-array name="expanded_desktop_style_values" translatable="false">
+        <item>0</item>
+        <item>1</item>
+        <item>2</item>
+    </string-array>
 </resources>
