--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -73,4 +73,10 @@
           android:fragment="com.evervolv.toolbox.power.PerfProfileSettings"
           evervolv:xmlRes="@xml/perf_profile_settings" />
 
+    <part android:key="expanded_desktop_settings"
+          android:title="@string/expanded_desktop_settings_title"
+          android:summary="@string/expanded_desktop_settings_summary"
+          android:fragment="com.evervolv.toolbox.applications.ExpandedDesktopSettings"
+          evervolv:xmlRes="@xml/expanded_desktop_prefs" />
+
 </parts-catalog>
