EVToolbox: update to material design
* Includes a little bit of cleanup.

Change-Id: If83bee422f65c9ba562d9482bdaf90cbd1710526

--- a/res/layout/drawer_nav_item.xml
+++ b/res/layout/drawer_nav_item.xml
@@ -32,7 +32,7 @@
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceListItemSmall"
         android:gravity="center"
-        android:textColor="#FF000000"
+        android:textColor="@color/evtoolbox_text_secondary"
         android:background="?android:attr/activatedBackgroundIndicator"
         android:minHeight="?android:attr/listPreferredItemHeightSmall"/>
 
