--- a/res/values/styles.xml
+++ b/res/values/styles.xml
@@ -1,5 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <style name="Theme.EVToolbox" parent="android:Theme.Material.Light.DarkActionBar">
+        <item name="android:colorPrimary">@color/evtoolbox_primary</item>
+        <item name="android:colorPrimaryDark">@color/evtoolbox_primary_dark</item>
+        <item name="android:colorAccent">@color/evtoolbox_accent</item>
+        <item name="android:textColorPrimary">@color/evtoolbox_text_primary</item>
+        <item name="android:textColor">@color/evtoolbox_text_secondary</item>
+        <item name="android:navigationBarColor">@color/evtoolbox_primary_dark</item>
+    </style>
+
     <style name="PinButton">
         <item name="android:layout_width">0dp</item>
         <item name="android:layout_height">64dp</item>
