--- a/res/xml/statusbar.xml
+++ b/res/xml/statusbar.xml
@@ -22,6 +22,13 @@
     android:key="statusbar_settings"
     android:title="@string/statusbar_settings_title" >
 
+    <com.evervolv.toolbox.preference.SystemSettingSwitchPreference
+        android:key="status_bar_notif_count"
+        android:title="@string/status_bar_notif_count_title"
+        android:summary="@string/status_bar_notif_count_summary"
+        android:defaultValue="false"
+        android:persistent="true" />
+
     <PreferenceCategory
         android:key="battery_category"
         android:title="@string/battery_category_title">
