EVToolbox:  Setup home key to wake device (2/2)
Change-Id: Ia2a2a39fa78cd0bc90d21cf0a1d2f69774f77766

--- a/res/xml/interface_general.xml
+++ b/res/xml/interface_general.xml
@@ -28,6 +28,11 @@
             android:summary="@string/pref_volume_wake_toggle_summary">
         </CheckBoxPreference>
 
+        <CheckBoxPreference android:key="pref_home_wake_toggle"
+            android:title="@string/pref_home_wake_toggle_title"
+            android:summary="@string/pref_home_wake_toggle_summary">
+        </CheckBoxPreference>
+
         <CheckBoxPreference
             android:key="pref_lockscreen_music_controls_volbtn"
             android:title="@string/pref_lockscreen_music_controls_volbtn_title"
