--- a/res/xml/button_settings.xml
+++ b/res/xml/button_settings.xml
@@ -16,6 +16,7 @@
 
 <PreferenceScreen
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:evervolv="http://schemas.android.com/apk/res-auto"
     android:key="button_settings"
     android:title="@string/button_settings_title">
 
@@ -52,6 +53,14 @@
             android:title="@string/advanced_reboot_title"
             android:summary="@string/advanced_reboot_summary"
             android:defaultValue="false" />
+
+        <evervolv.preference.SelfRemovingPreference
+            android:key="power_menu"
+            android:title="@string/power_menu_title"
+            android:summary="@string/power_menu_summary"
+            android:dependency="advanced_reboot"
+            android:fragment="com.evervolv.toolbox.input.PowerMenuActions"
+            evervolv:requiresFeature="com.evervolv.globalactions" />
 
     </PreferenceCategory>
 
