Power menu customizations [2/2]
Change-Id: Iadb41a661770f8b71eef4e12b1d8f04d0ba3e6be

--- a/res/xml/parts_catalog.xml
+++ b/res/xml/parts_catalog.xml
@@ -34,4 +34,9 @@
           android:fragment="com.evervolv.toolbox.input.ButtonSettings"
           evervolv:xmlRes="@xml/button_settings" />
 
+    <part android:key="power_menu"
+          android:title="@string/power_menu_title"
+          android:fragment="com.evervolv.toolbox.input.PowerMenuActions"
+          evervolv:xmlRes="@xml/power_menu_settings" />
+
 </parts-catalog>
