--- a/res/xml/interface_rotation.xml
+++ b/res/xml/interface_rotation.xml
@@ -18,16 +18,16 @@
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <CheckBoxPreference android:key="pref_rotation_0"
+    <SwitchPreference android:key="pref_rotation_0"
         android:title="@string/pref_rotation_0_title" />
 
-    <CheckBoxPreference android:key="pref_rotation_90"
+    <SwitchPreference android:key="pref_rotation_90"
         android:title="@string/pref_rotation_90_title" />
 
-    <CheckBoxPreference android:key="pref_rotation_180"
+    <SwitchPreference android:key="pref_rotation_180"
         android:title="@string/pref_rotation_180_title" />
 
-    <CheckBoxPreference android:key="pref_rotation_270"
+    <SwitchPreference android:key="pref_rotation_270"
         android:title="@string/pref_rotation_270_title" />
 
 </PreferenceScreen>
