--- a/res/xml/performance_memory.xml
+++ b/res/xml/performance_memory.xml
@@ -26,7 +26,7 @@
             android:entries="@array/pref_zram_size_entries"
             android:entryValues="@array/pref_zram_size_values" />
 
-    <CheckBoxPreference
+    <SwitchPreference
             android:key="pref_ksm"
             android:title="@string/pref_ksm_title"
             android:summary="@string/pref_ksm_summary" />
