--- a/res/xml/statusbar_general.xml
+++ b/res/xml/statusbar_general.xml
@@ -33,9 +33,9 @@
                 android:entries="@array/statusbar_clock_am_pm_style_entries"
                 android:entryValues="@array/statusbar_clock_am_pm_style_entryvalues" />
 
-        <CheckBoxPreference
+        <SwitchPreference
                 android:key="pref_statusbar_quick_pulldown"
                 android:title="@string/pref_statusbar_quick_pulldown_title"
                 android:summary="@string/pref_statusbar_quick_pulldown_summary">
-        </CheckBoxPreference>
+        </SwitchPreference>
 </PreferenceScreen>
