--- a/res/xml/superuser_settings.xml
+++ b/res/xml/superuser_settings.xml
@@ -17,7 +17,7 @@
  -->
 
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
-        <CheckBoxPreference
+        <SwitchPreference
                 android:key="pref_superuser_logging"
                 android:title="@string/pref_superuser_logging_title"
                 android:summary="@string/pref_superuser_logging_summary" />
