--- a/res/xml/system_network.xml
+++ b/res/xml/system_network.xml
@@ -29,7 +29,7 @@
         android:inputType="textNoSuggestions"
         android:persistent="false" />
 
-    <CheckBoxPreference
+    <SwitchPreference
         android:key="pref_system_sshd"
         android:title="@string/pref_system_sshd_title"
         android:summary="@string/pref_system_sshd_summary" />
