--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -159,6 +159,7 @@
     <string-array name="status_bar_battery_style_entries" translatable="false">
         <item>@string/status_bar_battery_style_icon_portrait</item>
         <item>@string/status_bar_battery_style_circle</item>
+        <item>@string/status_bar_battery_style_dotted_circle</item>
         <item>@string/status_bar_battery_style_text</item>
         <item>@string/status_bar_battery_style_hidden</item>
     </string-array>
@@ -166,6 +167,7 @@
     <string-array name="status_bar_battery_style_values" translatable="false">
         <item>0</item>
         <item>2</item>
+        <item>3</item>
         <item>5</item>
         <item>4</item>
     </string-array>
