EVToolbox:  update physical key options
 - remove trackball usage

Change-Id: I711002dd14ca56c8f7c575b757a457112a3bf671

--- a/res/values/config.xml
+++ b/res/values/config.xml
@@ -23,6 +23,13 @@
     <!-- Whether or not to display the home button settings -->
     <bool name="has_physical_buttons">false</bool>
 
+    <!-- Hardware button wake settings ** NEEDS has_physical_buttons set to true **-->
+    <bool name="has_app_switch_button">false</bool>
+    <bool name="has_assist_button">false</bool>
+    <bool name="has_back_button">false</bool>
+    <bool name="has_home_button">true</bool>
+    <bool name="has_menu_button">false</bool>
+
     <!-- Notification toolbox widges -->
     <bool name="config_has_gps" translatable="false">true</bool>
     <bool name="config_has_wimax" translatable="false">false</bool>
