--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -40,7 +40,7 @@
 
     <string-array name="performance_nav" translatable="false">
         <item>@string/performance_processor_title</item>
-        <item>@string/performance_memory_title</item>
+        <item>@string/general_title</item>
     </string-array>
 
     <string-array name="superuser_nav" translatable="false">
