--- a/res/xml/performance_general.xml
+++ b/res/xml/performance_general.xml
@@ -19,6 +19,12 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
 
     <ListPreference
+            android:key="pref_perf_profile"
+            android:dialogTitle="@string/perf_profile_title"
+            android:title="@string/perf_profile_title"
+            android:persistent="false" />
+
+    <ListPreference
             android:key="pref_zram_size"
             android:dialogTitle="@string/pref_zram_title"
             android:title="@string/pref_zram_title"
