--- a/res/values/arrays.xml
+++ b/res/values/arrays.xml
@@ -90,12 +90,30 @@
     </string-array>
 
     <string-array name="statusbar_batt_style_entries" translatable="false">
-        <item>@string/pref_statusbar_batt_style_stock</item>
-        <item>@string/pref_statusbar_batt_style_percent</item>
+        <item>@string/pref_statusbar_batt_style_portrait</item>
+        <item>@string/pref_statusbar_batt_style_landscape</item>
+        <item>@string/pref_statusbar_batt_style_circle</item>
+        <item>@string/pref_statusbar_batt_style_dotted_circle</item>
+        <item>@string/pref_statusbar_batt_style_text</item>
         <item>@string/pref_statusbar_batt_style_hidden</item>
     </string-array>
 
     <string-array name="statusbar_batt_style_entryvalues" translatable="false">
+        <item>0</item>
+        <item>5</item>
+        <item>2</item>
+        <item>3</item>
+        <item>6</item>
+        <item>4</item>
+    </string-array>
+
+    <string-array name="statusbar_batt_percent_entries" translatable="false">
+        <item>@string/pref_statusbar_batt_percent_hidden</item>
+        <item>@string/pref_statusbar_batt_percent_inside</item>
+        <item>@string/pref_statusbar_batt_percent_outside</item>
+    </string-array>
+
+    <string-array name="statusbar_batt_percent_entryvalues" translatable="false">
         <item>0</item>
         <item>1</item>
         <item>2</item>
