--- a/res/xml/status_bar_settings.xml
+++ b/res/xml/status_bar_settings.xml
@@ -31,6 +31,12 @@
     <PreferenceCategory
         android:title="@string/status_bar_icons_title">
 
+        <PreferenceScreen
+            android:key="network_traffic_settings"
+            android:title="@string/network_traffic_settings_title"
+            android:summary="@string/network_traffic_settings_summary"
+            android:fragment="com.evervolv.toolbox.statusbar.NetworkTrafficSettings" />
+
         <evervolv.preference.RemotePreference
             android:key="status_bar_icons"
             android:title="@string/status_bar_system_icons_title"
