Switch in settings menu switchable via toolbox (1 of 3)
Change-Id: Ie3bc15d2a2039d74be59112373fbc1faa72161cf

--- a/res/xml/interface_general.xml
+++ b/res/xml/interface_general.xml
@@ -55,6 +55,12 @@
         </SwitchPreference>
 
         <SwitchPreference
+            android:key="pref_interface_settings_switch_toggle"
+            android:title="@string/pref_interface_settings_switch_toggle_title"
+            android:summary="@string/pref_interface_settings_switch_toggle_summary">
+        </SwitchPreference>
+
+        <SwitchPreference
             android:key="pref_interface_fancy_ui"
             android:title="@string/pref_interface_fancy_ui_title"
             android:summary="@string/pref_interface_fancy_ui_summary"/>
